bugfix - AlarmLogSearch , AlarmRepository